Fixed margin for the content on mobile devices

--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -341,7 +341,7 @@ input:checked + .slider:before {
     font-size: 1rem;
     font-family: 'Roboto Condensed', arial, monospace;
     flex: 1;
-    margin-top: 50px;
+    margin-top: 48px;
     overflow: hidden;
 }
 
@@ -500,6 +500,7 @@ input:checked + .slider:before {
     overflow: hidden;
     white-space: nowrap;
     padding-top: 20px;
+    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
 }
 
 .icon-container {
